# a2a-projects

./: .gitmodules  README.md  pyproject.toml
frontend/: README.md  app.py  index.html
observability/: __init__.py  __main__.py  instrumentation.py
src/agents/weather_agent/: __main__.py  agent.py  agent_executor.py  configuration.json  instruction_prompt_template.txt  test_client.py
src/agents/weather_agent/deployment/configuration/: dev.json  prod.json  staging.json
src/agents/weather_agent/evaluation/: configuration.json  evaluation.py
src/agents/weather_agent/monitoring/: configuration.json  monitoring.py
src/agents/weather_agent/tests/integration/: test_integration.py
src/agents/weather_agent/tests/stress/: test_stress.py
src/tools/api_tools/weather_api/: weather_api.py
src/tools/api_tools/weather_api/test/: test_weather_api.py
src/tools/data_tools/weather_db/: models.py  weather_db.py
src/tools/data_tools/weather_db/test/: test_weather_db.py
src/tools/shared_libraries/: helpers.py
