[project]
name = "a2a-projects"
version = "0.1.0"
description = "A2A Learning Project with Weather Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # A2A Protocol
    "a2a-sdk[all]>=0.3.0",
    # LangChain / LangGraph (Latest: Nov 2025)
    "langgraph>=1.0.4",
    "langchain-google-genai>=2.1.0",
    "langchain-openai>=1.1.0",
    "langchain-core>=1.1.0",
    # Web Framework
    "uvicorn>=0.34.2",
    "starlette>=0.46.2",
    "sse-starlette>=2.3.6",
    # HTTP Client
    "httpx>=0.28.1",
    # Data Validation
    "pydantic>=2.10.6",
    # CLI
    "click>=8.1.8",
    # Environment
    "python-dotenv>=1.1.0",
    # Database
    "aiosqlite>=0.20.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "langchain>=1.1.0",
    # Frontend
    "streamlit>=1.40.0",
    # Observability
    "arize-phoenix>=8.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "observability"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
weather-agent = "src.agents.weather_agent.__main__:main"
phoenix-server = "observability.__main__:main"
